[package]
name = "jwtcoder"
version = "0.1.0"
authors = ["Dodo <kasper199914@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version="*", features= ["serde", "v4"] }
serde = "*"
serde_json = "*"
chrono = {version = "*", features = ["serde"]}
jsonwebtoken = "7.1.0"